# ai-chat-service

./: .env.example  .flake8  .gitignore  AI服务技术文档.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  init_faq.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: chat.py  faq.py  health.py
app/api/v1/: __init__.py  chat.py  faq.py  knowledge.py
app/core/: context_compressor.py  document_loader.py  exceptions.py  faq_engine.py  hybrid_searcher.py  logging.py  query_rewriter.py  reranker.py  responses.py  text_splitter.py  vector_store.py
app/db/: conversation_store.py  vector_store.py
app/models/: chat.py  common.py  faq.py  knowledge.py
app/services/: chat_service.py  conversation_service.py  faq_service.py  knowledge_service.py  llm_client.py
docs/: 配图需求文档.md
knowledge/: faq.json
scripts/: init_knowledge.py  test_phase3.py  test_phase3_local.py  test_real_api.py
tests/: conftest.py  test_chat.py  test_context_compressor.py  test_conversation.py  test_faq.py  test_hybrid_search.py  test_knowledge.py  test_query_rewriter.py  test_reranker.py
