[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-service"
version = "0.1.0"
description = "基于 RAG + DeepSeek 的企业级 AI 客服服务"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "应有成本估算团队"}
]
keywords = ["ai", "chatbot", "rag", "deepseek", "customer-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "chromadb>=0.4.22",
    "openai>=1.12",
    "python-dotenv>=1.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[project.urls]
Homepage = "https://github.com/pengyongjia/ai-chat-service"
Repository = "https://github.com/pengyongjia/ai-chat-service"
Issues = "https://github.com/pengyongjia/ai-chat-service/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", ".venv", "chroma_db"]
